--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Server is work</title>
-  </head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="./css/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="./css/style.css">
 
-  <body>
+<body>
 
-  </body>
-</html>
+
+<div class="navbar">
+  <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
+  <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
+  <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
+  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+</div>
+
+<div class="input">
+  <form class="form-inline" action="/action_page.php">
+    <label for="date_init"> De :</label>
+    <input type="datetime-local" id="date_init"  name="date_init">
+    <label for="date_end">A :</label>
+    <input type="datetime-local" id="date_end" name="date_end">
+    <button type="submit" class="fa fa-search btn" id="btn"></button>
+  </form>
+</div>
+
+</body>
+</html> 
