Correction du templates

--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='nicepage.css') }}" media="screen">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" media="screen">
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}" defer=""></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}" ></script>
     <script class="u-script" type="text/javascript" src= "{{ url_for('static', filename='nicepage.js') }}" defer=""></script>
     <meta name="generator" content="Nicepage 6.0.3, nicepage.com">
     <meta name="referrer" content="origin">
