--- a/templates/main.html
+++ b/templates/main.html
@@ -36,6 +36,34 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="fr">
+    <header>
+      <div class="section container-fluid container0" >
+        <div class="row">
+          <div class="col">
+            <nav class="section navbar navbar-expand-lg navbar-dark bg-dark">
+              <div class="container-fluid collapse navbar-collapse">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Accueil</a></li>
+                  <li class="nav-item"><a  class="nav-link" href="#">Conf</a></li>
+                </ul>
+              </div>                
+            </nav>
+          </div>
+        </div>
+        <div class="col-7"></div>
+        <div class="col"><p class="h6 text-light">ESP32 DASBORD</p></div>
+      </div>
+      <!-- <nav class="section navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid collapse navbar-collapse">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="#">Accueil</a></li>
+            <li class="nav-item"><a  class="nav-link" href="#">Conf</a></li>
+        </ul>
+        </div> -->
+          
+      </nav>
+  </header> 
+
     <div class="section container-fluid" >
       <div class="container">
         <div class="box">
@@ -52,11 +80,11 @@
         </div>
     </div>
     </div>
-    <div class="section" >
-      <!-- <div id = "Max-Humid" class="container1"> </div> -->
+    <div class="section container-fluid" >
+
       <div id="line-labels" class = "container2"></div>
     </div>
-    <div class="section">
+    <div class="section container-fluid">
       <!-- <button type="button" class="btn btn-primary">Primary</button> -->
       <div class="row d-flex align-items-end section2">
         <div class="col col-md-3">
@@ -68,14 +96,14 @@
           <input type="datetime-local" id="dateout" class="form-control text-muted">
         </div>
         <div class="col col-md-3">
-          <button type="button" class="btn btn-primary">Soumettre</button>
+          <button type="button" class="btn btn-primary" id="submitButton">Soumettre</button>
         </div>
       </div>
       
       
     </div>
-    <div class="section section-4">
-      <table class="table table-striped">
+    <div class="section section-4 container-fluid">
+      <table class="table table-striped table-responsive table-responsive-sm">
         <thead>
           <tr class="table-primary">
             <th>Capteur</th>
@@ -91,6 +119,9 @@
           </tbody>
       </table>
       
+    </div>
+    <div class="section container-fluid">
+      <p class="text-light">&copy;Heriniaina</p>
     </div>
     <script src="{{ url_for('static', filename='data.js') }}"></script>
     <script src="{{ url_for('static', filename='table.js') }}"></script>
