--- a/templates/main.html
+++ b/templates/main.html
@@ -41,7 +41,7 @@
                   <!-- <button id="loginBtn">Conf</button> -->
                 </ul>
               </div>
-              <button id="loginBtn">Conf</button> 
+
 
             </nav>
           </div>
@@ -53,7 +53,6 @@
       </nav>
       
   </header> 
-  <div id="loginPopup" class="hidden">  </div>
 
   <div id="modalContainer"></div>
     <div class="section container-fluid" >
@@ -117,7 +116,7 @@
     </div>
     <script src="{{ url_for('static', filename='data.js') }}"></script>
     <script src="{{ url_for('static', filename='table.js') }}"></script>
-    <script src="{{ url_for('static', filename='login.js') }}"></script>
+    <!-- <script src="{{ url_for('static', filename='login.js') }}"></script> -->
   </body>
 </html>
 
