--- a/static/login.css
+++ b/static/login.css
@@ -1,48 +1,33 @@
-/* Style pour le pop-up modal */
-/* .modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(243, 54, 54); 
-    background-color: rgba(195, 21, 21, 0.84); 
-    padding-top: 60px;
+html,
+body,
+.intro {
+  height: 100%;
 }
 
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto; 
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; 
+@media (min-width: 550px) and (max-width: 750px) {
+  html,
+  body,
+  .intro {
+    height: 550px;
+  }
 }
 
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+@media (min-width: 800px) and (max-width: 850px) {
+  html,
+  body,
+  .intro {
+    height: 550px;
+  }
 }
 
-.close:hover,
-.close:focus {
-    color: rgb(233, 23, 23);
-    text-decoration: none;
-    cursor: pointer;
-} */
-
-
-#popup {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
-    border:   
-1px solid #ccc;}
+a.link {
+  font-size: .875rem;
+  color: #6582B0;
+}
+a.link:hover, 
+a.link:active {
+  color: #426193;
+}
+#login {
+    background-color: rgba(41,46,51,1);
+}
