--- a/static/login.css
+++ b/static/login.css
@@ -31,3 +31,42 @@ a.link:active {
 #login {
     background-color: rgba(41,46,51,1);
 }
+
+body {
+  background-color: rgba(41, 46, 51, 1);
+  color: white;
+}
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.login-form {
+  width: 80%;
+  max-width: 400px;
+}
+.form-group {
+  text-align: left;
+  margin-bottom: 1.5rem;
+}
+
+.btn-login {
+  float: right;
+  margin-right: 0;
+}
+.create-account {
+  float: right;
+  margin-left: 1rem;
+}
+a.link {
+font-size: .875rem;
+color: #6582B0;
+}
+#password {
+margin-bottom: 0.5rem !important;
+}
+.card-body {
+margin-top: 1.5rem;
+}
