--- a/templates/main.html
+++ b/templates/main.html
@@ -38,6 +38,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item"><a class="nav-link" aria-current="page" href="/">Accueil</a></li>
                   <li class="nav-item"><a class="nav-link" aria-current="page" href="login">Configuration</a></li>
+                  <li class="nav-item"><a class="nav-link" aria-current="page" href="login1">conf</a></li>
                   <!-- <button id="loginBtn">Conf</button> -->
                 </ul>
               </div>
