--- a/static/login.css
+++ b/static/login.css
@@ -70,3 +70,14 @@ margin-bottom: 0.5rem !important;
 .card-body {
 margin-top: 1.5rem;
 }
+input[type="text"], input[type="password"] {
+  background-color: rgb(245, 226, 226);
+  color: rgb(10, 9, 9);
+  border: 1px solid white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+input[type="text"]::placeholder, input[type="password"]::placeholder {
+  color: rgb(94, 90, 90);
+}
