--- a/templates/main copy.html
+++ b/templates/main copy.html
@@ -1,195 +1,41 @@
-<!DOCTYPE html>
-<html style="font-size: 16px;" lang="fr"><head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <title>main</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='nicepage.css') }}" media="screen">
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" media="screen">
-    <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}" defer=""></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}" ></script>
-    <script class="u-script" type="text/javascript" src= "{{ url_for('static', filename='nicepage.js') }}" defer=""></script>
-    <meta name="generator" content="Nicepage 6.0.3, nicepage.com">
-    <meta name="referrer" content="origin">
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    <script src="{{ url_for('static', filename='highcharts/code/highcharts.js') }}"></script>
-    <script src= "{{ url_for('static', filename='highcharts/code/highcharts-more.js') }}" ></script>
-    <script src= "{{ url_for('static', filename='highcharts/code/modules/solid-gauge.js') }}" ></script>
-    <script src= "{{ url_for('static', filename='highcharts/code/modules/exporting.js') }}" ></script>
-    <script src= "{{ url_for('static', filename='highcharts/code/modules/export-data.js') }}" ></script>
-    <script src= "{{ url_for('static', filename='highcharts/code/modules/accessibility.js') }}" ></script>
-    
-    
-    <script type="application/ld+json">{
-		"@context": "http://schema.org",
-		"@type": "Organization",
-		"name": "",
-		"logo": "images/default-logo.png"
-}</script>
+<div class="form-check form-switch">
+  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+  <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
+</div>
+<div class="form-check form-switch">
+  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>
+  <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox input</label>
+</div>
+<div class="form-check form-switch">
+  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDisabled" disabled>
+  <label class="form-check-label" for="flexSwitchCheckDisabled">Disabled switch checkbox input</label>
+</div>
+<div class="form-check form-switch">
+  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCheckedDisabled" checked disabled>
+  <label class="form-check-label" for="flexSwitchCheckCheckedDisabled">Disabled checked switch checkbox input</label>
+</div>
 
-    <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="main">
-    <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="fr">
-    <header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-0adb">
-      <div class="u-clearfix u-sheet u-sheet-1">
-          <!-- <a href="https://nicepage.com" class="u-image u-logo u-image-1">
-            <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
-          </a> -->
-          <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1">
-            <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
-              <a class="u-button-style u-custom-border u-custom-border-color u-custom-borders u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-                <!-- <svg class="u-svg-link" viewBox="0 0 24 24">
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
-                </svg> -->
-
-                <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
-                    <g> 
-                      <rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"> </rect> <rect y="13" width="16" height="2"> </rect>
-                    </g>
-                </svg>
-              </a> 
-            </div>
-
-            <div class="u-custom-menu u-nav-container">
-                <ul class="u-nav u-spacing-20 u-unstyled u-nav-1">
-                  <li class="u-nav-item"><a class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-2-base" href="main.html" style="padding: 10px;">Accueil</a></li>
-                  <li class="u-nav-item"><a class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-palette-2-base" href="À-propos-de.html" style="padding: 10px;">Reporte</a></li>
-                </ul>
-            </div>
-
-            <div class="u-custom-menu u-nav-container-collapse">
-                <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-                  <div class="u-inner-container-layout u-sidenav-overflow">
-                    <div class="u-menu-close"></div>
-                    <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="main.html">Accueil</a></li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="À-propos-de.html">Reporte</a></li>
-                    </ul>
-                  </div>
-                </div>
-
-            <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-          </div>
-
-        </nav>
-      </div></header>
-
-    <section class="u-align-center u-clearfix u-palette-1-dark-3 u-section-1" id="sec-1a8c">
-      <!-- <div class="u-clearfix u-sheet u-sheet-1"> -->
-        <div class="u-clearfix u-sheet u-sheet-1">
-          <div class="u-expanded-width u-form u-form-1">
-            <form action="" class="u-clearfix u-form-horizontal u-form-spacing-10 u-inner-form" style="padding: 12px;" source="email">
-
-              <div class="u-form-date u-form-group u-label-top u-form-group-1">
-                <label for="date-0747" class="u-label u-label-1">Date</label>
-                <input type="text" placeholder="MM/JJ/AAAA" id="date-0747" name="date" class="u-border-custom-color-1 u-input u-input-rectangle u-none u-radius u-input-1" required="" data-date-format="mm/dd/yyyy">
-              </div>
-
-              <div class="u-form-group u-form-time u-label-top u-form-group-2">
-                <label for="time-899f" class="u-label u-label-2">Heure</label>
-                <input type="time" id="time-899f" name="time" class="u-border-custom-color-1 u-input u-input-rectangle u-none u-radius u-input-2">
-              </div>
-
-              <div class="u-form-date u-form-group u-label-top u-form-group-3">
-                <label for="date-4966" class="u-label u-label-3">Date</label>
-                <input type="text" placeholder="MM/JJ/AAAA" id="date-4966" name="date-1" class="u-border-custom-color-1 u-input u-input-rectangle u-none u-radius u-input-3" required="" data-date-format="mm/dd/yyyy">
-              </div>
-
-              <div class="u-form-group u-form-time u-label-top u-form-group-4">
-                <label for="time-6b23" class="u-label u-label-4">Heure</label>
-                <input type="time" id="time-6b23" name="time-1" class="u-border-custom-color-1 u-input u-input-rectangle u-none u-radius u-input-4">
-              </div>
-
-              <div class="u-form-group u-form-submit u-label-top">
-                <input type="submit" value="submit" class="u-form-control-hidden">
-                <a href="#" class="u-active-custom-color-2 u-btn u-btn-round u-btn-submit u-button-style u-grey-60 u-hover-palette-1-light-3 u-radius u-btn-1">ok</a>
-              </div>
-
-              <div class="u-form-send-message u-form-send-success">Thank you! Your message has been sent.</div>
-              <div class="u-form-send-error u-form-send-message">Unable to send your message. Please fix errors then try again.</div>
-              <input type="hidden" value="" name="recaptchaResponse">
-              <input type="hidden" name="formServices" value="be9dfe43-8659-8611-1539-c416b033967f">
-            </form>
-          </div>
-      </div>
-    </section>
-
-    <section class="u-clearfix u-gradient u-section-2" id="sec-f984">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-expanded-width u-layout-grid u-list u-list-1">
-          <div class="u-repeater u-repeater-1">
-            <div class="u-border-1 u-border-palette-3-light-2 u-container-style u-custom-item u-image u-image-contain u-list-item u-opacity u-opacity-35 u-repeater-item -u-image-1" data-image-width="1050" data-image-height="1485">
-              <div id = "Average-temp" class="u-container-layout u-similar-container u-container-layout-1"></div>
-            </div>
-
-            <div  class="u-border-1 u-border-grey-75 u-container-style u-custom-item u-image u-image-contain u-list-item u-repeater-item -u-image-2" data-image-width="1050" data-image-height="1485">
-              <div id="Average-Humid" class="u-container-layout u-similar-container u-container-layout-2"></div>
-            </div>
-
-            <div id="Max-Temp" class="u-border-1 u-border-grey-75 u-container-style u-custom-item u-image u-image-contain u-list-item u-repeater-item -u-image-3" data-image-width="1050" data-image-height="1485">
-              <div class="u-container-layout u-similar-container u-container-layout-3"></div>
-            </div>
-
-            <div class="u-border-1 u-border-grey-75 u-container-style u-custom-item u-image u-image-contain u-list-item u-repeater-item -u-image-4" data-image-width="1050" data-image-height="1485">
-              <div id = "Max-Humid"  class="u-container-layout u-similar-container u-container-layout-4"></div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="u-border-2 u-border-grey-75 u-clearfix u-palette-5-dark-3 u-section-3" id="sec-7b25">
-      <div class="u-clearfix u-sheet u-valign-bottom-lg u-valign-bottom-md u-valign-bottom-sm u-valign-bottom-xs u-sheet-1">
-        <div class="u-container-style u-expanded-width u-group u-opacity u-opacity-85 u-palette-1-base u-group-1">
-          <div class="u-container-layout u-container-layout-1">
-            <button type="button" class="btn btn-dark mb-2">Dark</button>
-            <div id="line-labels"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="u-clearfix u-palette-5-dark-3 u-section-4" id="sec-c066">
-      <div class="u-clearfix u-sheet u-valign-bottom-xl u-sheet-1">
-        <div class="u-container-style u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-palette-1-base u-group-1">
-          <div class="u-container-layout u-container-layout-1"></div>
-            <table class="table">
-              <thead class="table-dark">
-                ...
-              </thead>
-              <tbody>
-                ...
-              </tbody>
-            </table>
-        </div>
-      </div>
-    </section>
-    
-    <script src="{{ url_for('static', filename='data.js') }}"></script>
-    
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-536b">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Heriniaina 2023</p>
-      </div>
-    </footer>
-
-    <section class="u-backlink u-clearfix u-grey-80">
-      <!-- <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a> -->
-      <!-- <p class="u-text">
-        <span>created with</span>
-      </p> -->
-      <!-- <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>.  -->
-    </section>
-       
-  </body>
-</html>
-
-
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+  <label class="form-check-label" for="flexRadioDefault1">
+    Poule
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+  <label class="form-check-label" for="flexRadioDefault2">
+    Cane
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+  <label class="form-check-label" for="flexRadioDefault1">
+    Oie
+  </label>
+</div>
+<div class="form-check">
+  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+  <label class="form-check-label" for="flexRadioDefault2">
+    Caille
+  </label>
+</div>
