--- a/templates/main.html
+++ b/templates/main.html
@@ -5,14 +5,12 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <title>main</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='nicepage.css') }}" media="screen">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}" media="screen">
     <link rel="stylesheet" href="{{ url_for('static', filename='page.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='/bootstrap/css/bootstrap.css') }}">
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}" defer=""></script>
     <script type="text/javascript" src="{{ url_for('static', filename='jquery.js') }}" ></script>
-    <script class="u-script" type="text/javascript" src= "{{ url_for('static', filename='nicepage.js') }}" defer=""></script>
     <meta name="referrer" content="origin">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <script src="{{ url_for('static', filename='highcharts/code/highcharts.js') }}"></script>
@@ -37,7 +35,7 @@
               <div class="container-fluid collapse navbar-collapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item"><a class="nav-link" aria-current="page" href="/">Accueil</a></li>
-                  <li class="nav-item"><a class="nav-link" aria-current="page" href="login">Configuration</a></li>
+                  <li class="nav-item"><a class="nav-link" id="btn-parametres">Configuration</a></li>
                   <!-- <button id="loginBtn">Conf</button> -->
                 </ul>
               </div>
@@ -90,7 +88,7 @@
       
     </div>
     <div class="section section-4 container-fluid">
-      <table class="table table-striped table-responsive table-responsive-sm">
+      <table class="table table-striped table-responsive table-responsive-sm container">
         <thead>
           <tr class="table-primary">
             <th>Capteur</th>
@@ -112,6 +110,7 @@
     </div>
     <script src="{{ url_for('static', filename='data.js') }}"></script>
     <script src="{{ url_for('static', filename='table.js') }}"></script>
+    <script src="{{ url_for('static', filename='is_authenticated.js') }}"></script>
     <!-- <script src="{{ url_for('static', filename='login.js') }}"></script> -->
   </body>
 </html>
