Correction de bug et finalisation de la version simple de l'application, cette version est oppèrationnel

--- a/templates/parametre.html
+++ b/templates/parametre.html
@@ -187,11 +187,17 @@
                     <input type="number" max="10" class="form-control" aria-label="Retournement" aria-describedby="retournement-label" id="retournement">
                   </div>
                 </div>
+                <div class="input-group input-group-sm mb-3">
+                  <span class="input-group-text" id="dayclose-label">Jours d'éclosion</span>
+                  <input type="number" max="50" class="form-control" aria-label="Retournement" aria-describedby="dayclose-label" id="dayclose">
+                </div>
+              </div>
               </div>
               
               <div class="box">
                 <button class="btn btn-primary btn-rounded"  id="login-btn" type="submit" style="background-color: #92aad0;">Enregistrer</button>
               </div>
+              <div id="Message" style="color: red;"></div>
             </div>
           </form>
         </div>
