ajout valeur min du champs jours d'éclosion

--- a/templates/parametre.html
+++ b/templates/parametre.html
@@ -189,7 +189,7 @@
                 </div>
                 <div class="input-group input-group-sm mb-3">
                   <span class="input-group-text" id="dayclose-label">Jours d'éclosion</span>
-                  <input type="number" max="50" class="form-control" aria-label="Retournement" aria-describedby="dayclose-label" id="dayclose">
+                  <input type="number" max="50" min="1"  class="form-control" aria-label="Retournement" aria-describedby="dayclose-label" id="dayclose">
                 </div>
               </div>
               </div>
